# Crawl_RS

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
examples/: seeds.txt
src/: app.rs  book.rs  character.rs  cli.rs  codex.rs  codex_text.rs  config.rs  draw.rs  main.rs  run_state.rs  term.rs
src/data/: items.rs  mobs.rs  mod.rs
src/ecs/: components.rs  mod.rs
src/ecs/systems/: ai.rs  combat.rs  fov.rs  input.rs  inventory.rs  mod.rs  movement.rs  pickup.rs  render.rs  status.rs
src/ecs/systems/inventory/: consume.rs  effects.rs  equip.rs  mod.rs  sell.rs
src/game/: level.rs  mod.rs  turn.rs
src/map/: fov.rs  mod.rs  tile.rs
src/save/: build.rs  codex.rs  io.rs  mod.rs  restore.rs  scores.rs  types.rs
src/ui/: book.rs  buffer.rs  help.rs  layout.rs  menus.rs  messages.rs  mod.rs  status.rs  threats.rs  title.rs
